--- a/Exam's/NodeJS - MySQL Exam/back-end/package.json
+++ b/Exam's/NodeJS - MySQL Exam/back-end/package.json
@@ -14,10 +14,12 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.0.1"
   }
