--- a/REACT/06-Leson/ca-task/my-app/package.json
+++ b/REACT/06-Leson/ca-task/my-app/package.json
@@ -7,11 +7,13 @@
     "@types/node": "^18.11.19",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "axios": "^1.3.2",
     "cra-template-typescript": "1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "typescript": "^4.9.5"
   },
   "scripts": {
